tests/errmsgs/tunknown_warning.nim
discard """
  matrix: "--warningAsError:UnknownWarning"
  errormsg: "unknown warning: 'Something' [UnknownWarning]"
  line: 7
"""

{.push warning[Something]: on.}
{.pop.}